@@ -4,7 +4,7 @@ import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Set;
 
 import org.apache.commons.lang.StringEscapeUtils;
 import org.testng.annotations.BeforeMethod;
@@ -21,13 +21,13 @@ import teammates.common.util.Const;
 import teammates.common.util.HibernateUtil;
 import teammates.common.util.SanitizationHelper;
 import teammates.common.util.TimeHelper;
-import teammates.storage.sqlentity.DeadlineExtension;
-import teammates.storage.sqlentity.FeedbackQuestion;
-import teammates.storage.sqlentity.FeedbackResponse;
-import teammates.storage.sqlentity.FeedbackSession;
-import teammates.storage.sqlentity.Instructor;
-import teammates.storage.sqlentity.Student;
-import teammates.storage.sqlentity.User;
+import teammates.storage.entity.DeadlineExtension;
+import teammates.storage.entity.FeedbackQuestion;
+import teammates.storage.entity.FeedbackResponse;
+import teammates.storage.entity.FeedbackSession;
+import teammates.storage.entity.Instructor;
+import teammates.storage.entity.Student;
+import teammates.storage.entity.User;
 import teammates.ui.output.FeedbackResponseData;
 import teammates.ui.output.FeedbackResponsesData;
 import teammates.ui.request.FeedbackResponsesRequest;
@@ -97,7 +97,7 @@ public class SubmitFeedbackResponsesActionIT extends BaseActionIT<SubmitFeedback
 
     private FeedbackQuestion getQuestion(
             FeedbackSession session, int questionNumber) {
-        List<FeedbackQuestion> questions = session.getFeedbackQuestions();
+        Set<FeedbackQuestion> questions = session.getFeedbackQuestions();
         return questions.stream()
                 .filter(question -> question.getQuestionNumber() == questionNumber)
                 .findFirst()
@@ -122,17 +122,14 @@ public class SubmitFeedbackResponsesActionIT extends BaseActionIT<SubmitFeedback
 
     private void setUserDeadlineExtension(FeedbackSession session, User user, int days)
             throws InvalidParametersException, EntityDoesNotExistException, EntityAlreadyExistsException {
-        DeadlineExtension newDeadline =
-                new DeadlineExtension(user, session, TimeHelper.getInstantDaysOffsetFromNow(days));
-
-        newDeadline.setFeedbackSession(session);
-        newDeadline.setUser(user);
-
-        DeadlineExtension existingDeadlineEndTime = logic.getDeadlineExtensionEntityForUser(session, user);
-        if (existingDeadlineEndTime != null) {
-            newDeadline.setId(existingDeadlineEndTime.getId());
-            logic.updateDeadlineExtension(newDeadline);
+        Instant endTime = TimeHelper.getInstantDaysOffsetFromNow(days);
+        DeadlineExtension existingDeadline = logic.getDeadlineExtensionEntityForUser(session, user);
+        if (existingDeadline != null) {
+            existingDeadline.setEndTime(endTime);
+            logic.updateDeadlineExtension(existingDeadline);
         } else {
+            DeadlineExtension newDeadline = new DeadlineExtension(user, endTime);
+            session.addDeadlineExtension(newDeadline);
             logic.createDeadlineExtension(newDeadline);
         }
     }
@@ -160,8 +157,7 @@ public class SubmitFeedbackResponsesActionIT extends BaseActionIT<SubmitFeedback
     }
 
     private void setSubmitSessionInSectionsInstructorPrivilege(FeedbackSession session,
-                                                        Instructor instructor, boolean value)
-            throws Exception {
+                                                        Instructor instructor, boolean value) {
         String courseId = session.getCourseId();
 
         InstructorPrivileges instructorPrivileges = new InstructorPrivileges();
@@ -174,11 +170,11 @@ public class SubmitFeedbackResponsesActionIT extends BaseActionIT<SubmitFeedback
     }
 
     private List<String> extractStudentEmails(List<Student> students) {
-        return students.stream().map(User::getEmail).collect(Collectors.toList());
+        return students.stream().map(User::getEmail).toList();
     }
 
     private List<String> extractStudentTeams(List<Student> students) {
-        return students.stream().map(Student::getTeamName).collect(Collectors.toList());
+        return students.stream().map(Student::getTeamName).toList();
     }
 
     private FeedbackResponsesRequest buildRequestBodyWithStudentRecipientsEmail(
@@ -195,7 +191,7 @@ public class SubmitFeedbackResponsesActionIT extends BaseActionIT<SubmitFeedback
 
     private List<String> extractInstructorEmails(
             List<Instructor> students) {
-        return students.stream().map(recipient -> recipient.getEmail()).collect(Collectors.toList());
+        return students.stream().map(User::getEmail).toList();
     }
 
     private FeedbackResponsesRequest buildRequestBodyWithInstructorRecipients(List<Instructor> recipients) {
